professional card class changed from card to coach-card to resolve problem of product details page collapsing in on itself

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,14 +275,14 @@ p .testimonials{
 }
 
 /*--Coach Page CSS--*/
-.card {
+.coach-card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin: auto;
   text-align: center;
 }
 
-.title {
+.coach-title {
   color: grey;
   font-size: 18px;
 }
